<resources>
    <string name="app_name">Donor Darah</string>
    <string name="Login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="donor_darah">Donor Darah</string>
    <string name="daftar">Daftar</string>
    <string name="belum_punya_akun">belum punya akun?</string>
    <string name="masuk">Masuk</string
    <string name="nama">Nama</string>
    <string name="masukan_ulang_password">Masukan Ulang Password</string>
    <string name="user">User</string>
</resources>