<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">



   <LinearLayout
       android:id="@+id/LL1"
       android:gravity="center"
       android:orientation="vertical"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">


       <ImageView
           android:layout_marginTop="50dp"
           android:layout_width="300dp"
           android:layout_height="300dp"
           android:background="@mipmap/ic_icon" />
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/donor_darah"
           android:textColor="@color/red1"
           android:textSize="10pt"
           android:textStyle="bold" />

   </LinearLayout>
    <androidx.cardview.widget.CardView
        android:id="@+id/Cv1"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/LL1"
        android:layout_width="match_parent"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/red1"
        android:layout_height="match_parent">
        <View
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:background="@color/red2"/>

    <LinearLayout

        android:id="@+id/LL2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LL1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tvPleaseLogin"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/Login"
            android:textSize="12pt"
            android:textColor="@color/white"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/hint"
            android:hint="@string/email" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorHint="@color/hint"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@color/white"
            android:text="@string/masuk"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:layout_marginBottom="5dp"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/LL3">
            <TextView
                android:id="@+id/txt1"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_margin="5dp"
                android:text="@string/belum_punya_akun"/>
            <TextView
                android:id="@+id/btntxtdaftar"
                android:textColor="@color/cyan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/daftar"
                android:textStyle="bold"
                android:layout_margin="5dp"
                />


        </LinearLayout>



    </LinearLayout>
    </androidx.cardview.widget.CardView>




</RelativeLayout>