<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <LinearLayout
        android:id="@+id/lin1"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"

                android:layout_margin="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:background="@color/red1"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:text="@string/user"/>
        <EditText
            android:id="@+id/Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/hint"
            android:hint="@string/email" />
        <EditText
            android:id="@+id/Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/hint"
            android:hint="@string/password"
            android:inputType="textPassword" />
        <EditText
            android:id="@+id/RePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/hint"
            android:inputType="textPassword"
            android:hint="@string/masukan_ulang_password" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView

        android:paddingTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="10dp">

            <TextView
                android:background="@color/red1"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:text="Biodata"/>


        <EditText
            android:id="@+id/Nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/hint"
            android:hint="@string/nama" />
        <EditText
            android:id="@+id/TempatLahir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/hint"
            android:hint="Tempat Lahir" />
        <EditText
            android:id="@+id/TglLahir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/hint"
            android:inputType="date"
            android:hint="Tanggal Lahir" />
        <EditText
            android:id="@+id/JenisKelamin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/hint"
            android:hint="Jenis Kelamin" />
        <EditText
            android:id="@+id/Alamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/hint"
            android:hint="Alamat" />
        <EditText
            android:id="@+id/Pekerjaan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/hint"
            android:hint="Pekerjaan" />
        <EditText
            android:id="@+id/Tbadan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/hint"
            android:hint="Tinggi badan" />
        <EditText
            android:id="@+id/BBadan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/hint"
            android:hint="Berat Badan" />
        <EditText
            android:id="@+id/GolDarah"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/hint"
            android:hint="Golongan Darah" />
       <ImageView

           android:layout_gravity="center"
           android:layout_width="100dp"
           android:layout_height="100dp"/>
        <Button
            android:id="@+id/btnPickprofil"
            android:background="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Pilih gambar"/>
        <Button
            android:id="@+id/btnKrm"
            android:layout_marginTop="10dp"
            android:background="@color/blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Kirim"/>
    </LinearLayout>
    </androidx.cardview.widget.CardView>


    </LinearLayout>

</androidx.core.widget.NestedScrollView>